AUTOMAKE_OPTIONS = subdir-objects
bin_PROGRAMS = d16-cc2
AM_YFLAGS=-d 
d16_cc2_SOURCES =  src/ASTNode.cpp src/Operator.cpp src/Function.cpp src/NumNode.cpp  src/Var.cpp src/Eval.cpp src/Assign.cpp src/Selection.cpp src/Return.cpp src/While.cpp src/VarDec.cpp src/List.cpp src/Param.cpp src/Call.cpp src/parser.ypp src/lex.lpp src/main.cpp
AM_CPPFLAGS= -std=c++1y -Isrc -Wno-deprecated-register
